Fixed positioning of tripGraphHide (now trip_graph_hide) again (map_canvas uses "z-index: 1" in v3). Fixed setting of opacity of visited areas. Clarified format of latLng in tripData (v2 vs. v3).
--HG--
branch : api_v3

--- a/live/map.css
+++ b/live/map.css
@@ -56,7 +56,7 @@ td {
   white-space: nowrap;
 }
 
-div.tripGraphHide {
+div.trip_graph_hide {
   border: 0px;
   position: absolute;
   right: 0;
